@@ -158,7 +158,7 @@ public class RMIClient implements Serializable {
 
     private boolean pagedResults(List<String> results) {
         return !(results.size() == 1
-                && ("No barrels available.".equals(results.getFirst()) || "URL Indexed.".equals(results.getFirst())));
+                && ("No barrels available.".equals(results.get(0)) || "URL Indexed.".equals(results.get(0))));
     }
 
     /**
